# CyrexMC

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  ALL_CHANGES_BACKUP.patch  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  SERVER_START_DOC.md  gitbottest  mc_connection.pcapng  run-clang-tidy
.github/workflows/: cmake-multi-platform.yml
cmake/: Config.cmake  Format.cmake  Tidy.cmake
cyrexmc/: main.cpp  server.cpp  server.hpp
server/: main.cpp
src/: client.hpp  deflate.hpp  do.py  info.cpp  info.hpp  main.cpp  network_peer.hpp  raknet-utils.hpp  raknet_peer.cpp  raknet_peer.hpp  server.cpp  server.hpp
src/actor/: actor.cpp  actor.hpp
src/command/: command.hpp  command_base.hpp  command_context.hpp  command_manager.cpp  command_manager.hpp  command_registry.cpp  command_registry.hpp  permission.hpp
src/command/types/: performance_command.cpp  performance_command.hpp  server_info_command.cpp  server_info_command.hpp  stop_command.cpp  stop_command.hpp
src/cyrexmc/: network_peer.hpp  raknet_peer.cpp  raknet_peer.hpp  server.cpp  server.hpp
src/log/: color.hpp  console_logger.hpp  level.hpp  logging.cpp  logging.hpp  message_format.hpp  message_type.hpp
src/math/: vector2.hpp  vector3.hpp
src/network/: network_peer.hpp
src/network/io/: binary_reader.hpp  binary_writer.hpp  uuid_helper.hpp
src/network/mcbe/: mcbe_batch_decoder.cpp  mcbe_batch_decoder.hpp  packet.cpp  packet.hpp  packet_def.cpp  packet_def.hpp  packet_direction.hpp  packet_factory.cpp  packet_factory.hpp  packet_pool.cpp  packet_pool.hpp  packetbase.hpp  packetids.hpp  transport.hpp
src/network/mcbe/compression/: compressor.hpp  compressors.hpp  noop_compressor.hpp  snappy_compressor.cpp  snappy_compressor.hpp  zlib_compressor.cpp  zlib_compressor.hpp
src/network/mcbe/encryption/: encryption.cpp  encryption.hpp
src/network/mcbe/handler/: session_begin_handler.hpp
src/network/mcbe/protocol/: client_cache_status.hpp  client_to_server_handshake.hpp  disconnect.hpp  login.hpp  network_settings.hpp  packet_violation_warning.hpp  play_status.hpp  protocol_info.hpp  request_network_settings.hpp  resource_pack_chunk_data.hpp  resource_pack_chunk_request.cpp  resource_pack_chunk_request.hpp  resource_pack_client_response.cpp  resource_pack_client_response.hpp  resource_pack_data_info.hpp  resource_pack_packet_impl.hpp  resource_pack_stack.hpp  resource_packs_info.hpp  server_to_client_handshake.hpp  sub_client_login.hpp
src/network/mcbe/protocol/types/: CompressionAlgorithm.hpp  Experiments.hpp  GameMode.hpp  PlayStatus.hpp  SubClientId.hpp  ViolationSeverity.hpp
src/network/mcbe/protocol/types/experiments/: ExperimentData.hpp
src/network/mcbe/protocol/types/login/: LoginData.hpp
src/network/mcbe/protocol/types/packs/: ResourcePackClientResponseStatus.hpp  ResourcePackData.hpp  ResourcePackDataTypes.hpp  ResourcePackEntry.hpp  ResourcePackInfoEntry.hpp  ResourcePackMeta.hpp  ResourcePackStackEntry.hpp
src/network/mcbe/resourcepacks/: resource_pack.hpp  resource_pack_def.hpp  resource_pack_factory.cpp  resource_pack_factory.hpp
src/network/mcbe/resourcepacks/loader/: resource_pack_loader_def.hpp  zipped_resource_pack_loader.cpp  zipped_resource_pack_loader.hpp
src/network/mcbe/resourcepacks/types/: zipped_resource_pack.cpp  zipped_resource_pack.hpp
src/network/raknet/: mcbe_packet_router.cpp  mcbe_packet_router.hpp  raknet_connections.cpp  raknet_connections.hpp  raknet_guid_hash.hpp  raknet_handler.cpp  raknet_handler.hpp  raknet_motd.cpp  raknet_motd.hpp  raknet_peer.cpp  raknet_peer.hpp  raknet_transport.cpp  raknet_transport.hpp
src/network/raknet/connection/: raknet_connections.cpp  raknet_connections.hpp  raknet_peer.cpp  raknet_peer.hpp  raknet_transport.cpp  raknet_transport.hpp
src/network/raknet/handler/: mcbe_packet_router.cpp  mcbe_packet_router.hpp  raknet_handler.cpp  raknet_handler.hpp
src/network/raknet/motd/: raknet_motd.cpp  raknet_motd.hpp
src/network/raknet/other/: raknet_peer.cpp  raknet_peer.hpp
src/network/session/: network_session.cpp  network_session.hpp
src/network/util/: binary_stream.hpp
src/player/: player.cpp  player.hpp
src/text/: color.hpp
src/text/format/: builder.hpp  color.hpp  strip.hpp  stylized_text_formatter.hpp
src/text/render/: ansi.hpp
src/util/: cpu.hpp  performance.cpp  performance.hpp  server_properties.cpp  server_properties.hpp  textformat.hpp  time.hpp  uuid.hpp  zip.hpp
tests/: example_test.cpp  server.cpp
